    - corrected cluttered progress display if console output was redirected
    - optimized timeout for waiting for a keyboard event in boot time interface
    - the following translations were updated:

      Portuguese, Chinese (Traditional)

    - FAT formatted volumes are displayed in GUI now as FAT12/FAT16/FAT32
      instead of less informative FAT/FAT32
    - winx_ftw, winx_fsize, winx_kb_read, winx_xtime, winx_prompt_ex,
      winx_get_file_contents, winx_release_file_contents, winx_wcsistr,
      winx_print_array_of_strings, winx_get_volume_information,
      calls were added to zenwinx library
    - winx_fbopen call added to zenwinx library for buffered file i/o support
    - obsolete winx_get_volume_size and winx_get_filesystem_name calls
      were removed from zenwinx library; use more common
      winx_get_volume_information instead
    - one little bug in winx_kbhit, winx_breakhit functions was fixed
    - udefrag_get_vollist and udefrag_release_vollist calls were added
      to udefrag library; an obsolete udefrag_get_avail_volumes was removed
    RC1:
    - partial defragmentation was added to decrease number of fragments
      even when there is no free space on disk to hold all fragments of the file together
    - volume optimization algorithm was improved to prevent useless
      additional optimization passes
    - one little bug preventing optimization from being stopped was fixed
      in driver
    - volume optimization algorithm was improved to prevent skipping
      heavily fragmented parts of the processed volume
    - progress is now added to the GUI window caption,
      so it is displayed in the tool-tip of the task-bar icon
    - cryptic single character progress label was replaced
      by the localized operation names
    - file system type detection was rewritten to be more reliable
      and detect UDF-formatted volumes properly
    - fixed a problem where the case of the names of the help pages