@@ -289,6 +289,8 @@ typedef struct _CURDIR
     PVOID Handle;
 } CURDIR, *PCURDIR;
 
+#define HEAP_ZERO_MEMORY                0x00000008      // winnt
+
 typedef struct _RTL_HEAP_DEFINITION {
     ULONG Length; /* = sizeof(RTL_HEAP_DEFINITION) */
     ULONG Unknown[11];
