@@ -23,6 +23,7 @@ HISTORY
 
     - FAT formatted volumes are displayed in GUI now as FAT12/FAT16/FAT32
       instead of less informative FAT/FAT32
+    - winx_heap_alloc replaced by winx_heap_alloc_ex to allow specifying flags
     - winx_ftw, winx_fsize, winx_kb_read, winx_xtime, winx_prompt_ex,
       winx_get_file_contents, winx_release_file_contents, winx_wcsistr,
       winx_print_array_of_strings, winx_get_volume_information,
